[package]
name = "timelog"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.6"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
cli-table = "0.5.0"
crossterm = "0.29.0"
dirs = "6.0.0"
getrandom = "0.4.2"
inquire = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.22.0", features = ["serde", "v4"] }
